fix dialog bg covering whole page

--- a/koral.css
+++ b/koral.css
@@ -93,11 +93,11 @@ a:hover {
 }
 
 .dialogBg {
-  position:absolute;
-  left:0;
-  top:0;
-  right:0;
-  bottom:0;
+  position:fixed;
+  width:100%;
+  height:100%;
+  top:0px;
+  left:0px;
   opacity:0.12;
   background-color:rgb(0, 0, 0);
   z-index:100;
